causaltest web demonstration init

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+server.port=8089
+#声明thymeleaf使用非严格的html。
+spring.thymeleaf.servlet.content-type=text/html
+spring.thymeleaf.mode=LEGACYHTML5
+spring.thymeleaf.cache=false
