--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,6 @@ server.port=8089
 spring.thymeleaf.servlet.content-type=text/html
 spring.thymeleaf.mode=HTML
 spring.thymeleaf.cache=false
+server.tomcat.accesslog.buffered=true
+server.tomcat.accesslog.directory=/home/zl/Documents/test
+server.tomcat.accesslog.enabled=true
