--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,5 @@ spring.thymeleaf.servlet.content-type=text/html
 spring.thymeleaf.mode=HTML
 spring.thymeleaf.cache=false
 server.tomcat.accesslog.buffered=true
-server.tomcat.accesslog.directory=/home/zhaole/webtool
+#server.tomcat.accesslog.directory=/home/zhaole/webtool
 server.tomcat.accesslog.enabled=true
